correct News label on front page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -45,7 +45,7 @@
 						<td></td>	
 					</tr>
 					<tr>
-						<td>Opinion</td>
+						<td>News</td>
 						<td><div class = 'text-center'>4</div></td>
 						<td><a href="/article?request_url=http://www.nytimes.com/2013/09/17/world/europe/us-and-allies-tell-syria-to-dismantle-chemical-arms-quickly.html?ref=world"> 	U.S. and Allies Push for Strong U.N. Measure on Syria’s Arms</a></td>
 						<td></td>	
