--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -36,6 +36,14 @@
 				<thead>
 					<tr> <td>Article Type</td> <td><div class="text-center">Hype score</div></td> <td>Headline</td> </tr>
 				</thead>
+					<tr>
+						<td>Opinion</td>
+						<td><div class = 'text-center'>97</div></td>
+						<td><a href="/article?request_url=http://beforeitsnews.com/alternative/2011/05/hidden-obamacare-secret-rfid-chip-implants-mandatory-for-all-by-march-23-2013-665502.html"> 	Hidden Obamacare Secret: “RFID Chip Implants” Mandatory for All by March 23, 2013</a></td>
+						<td></td>	
+					</tr>
+
+
 				<tbody>
 					<tr>
 						<td>Opinion</td>
