added the contact page with explanation about me and the project

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -55,7 +55,7 @@
             <ul class="nav">
               <li class="nav"><a href="/index">Home</a></li>
               <li><a href="/slides">Slides</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="/contact">Contact</a></li>
             </ul>
           </div>
         </div>
